--- a/settings.json
+++ b/settings.json
@@ -27,6 +27,7 @@
 		"showInvisibles": true,
 		"tabLength": 3
 	},
+	"emmet": {},
 	"exception-reporting": {
 		"userId": "2f79bfbd-1e45-1466-b028-a6cca41ee6c7"
 	},
@@ -39,10 +40,12 @@
 			"node/*"
 		]
 	},
+	"language-babel": {
+		"allowLocalOverride": true
+	},
 	"sync-settings": {
 		"gistDescription": "atom-settings"
 	},
-	"tree-ignore": {},
 	"welcome": {
 		"showOnStartup": false
 	}
