--- a/settings.json
+++ b/settings.json
@@ -22,13 +22,13 @@
 		"disabledPackages": [
 			"react"
 		],
+		"telemetryConsent": "no",
 		"themes": [
 			"atom-dark-ui",
 			"one-dark-syntax"
 		]
 	},
 	"editor": {
-		"fontSize": 12,
 		"invisibles": {
 			"eol": " "
 		},
